tests/format/misc/errors/js/html-like-comments.js
// Only support HTML-like comment in HTML
alert(
<!-- comment
'hello world'
)
